# Car-Shop

./: .gitignore  .gitmodules  CMakeLists.txt  Car.h  README.md  customer_model.cpp  customer_model.h  employee.cpp  employee.h  main.cpp
CarController/: carController.cpp  carController.h
CarService/: carService.cpp  carService.h
Controller/: Controller.cpp  Controller.h
Controllers/: carController.cpp  carController.h  customerController.cpp  customerController.h  employeeController.cpp  employeeController.h  orderController.cpp  orderController.h
CustomerController/: customerController.cpp  customerController.h  customer_controller.cpp  customer_controller.h
CustomerService/: customer_service.cpp  customer_service.h
CustomerUI/: customerUI.cpp  customerUI.h
Domain/: Bestellung_Domain.cpp  Employee.cpp  Employee.h  User.cpp  User.h  customerDomain.cpp  customerDomain.h
Domain/CarDomain/: Car.cpp  Car.h
Domain/CustomerDomian/: Customer.cpp  Customer.h
Domain/EmployeeDomain/: Employee.cpp  Employee.h
Domain/JsonAdapter/: JsonAdapter.cpp  JsonAdapter.h  JsonCar.cpp  JsonCar.h  JsonEmployee.cpp  JsonEmployee.h  JsonOrder.cpp  JsonOrder.h
Domain/OrderDomain/: Order.cpp  Order.h
EmployeeController/: employeeController.cpp  employeeController.h
EmployeeService/: employeeService.cpp  employeeService.h
JsonDB/: Car.json  Customer.json  Employee.json  Order.json
MainController/: Controller.cpp  Controller.h
OrderController/: orderController.cpp  orderController.h
OrderService/: orderService.cpp  orderService.h
Repo/: Bestellung_Repo.cpp  Bestellung_Repo.h
Service/: Bestellung_Service.cpp  Bestellung_Service.h
Services/: carService.h  customerService.cpp  customerService.h  employeeService.cpp  employeeService.h  orderService.cpp  orderService.h
Tests/: Order_tests.cpp  Order_tests.h  carTest.cpp  carTest.h  customerTests.cpp  customerTests.h
UI/: UI.cpp  UI.h  main_ui.cpp  main_ui.h
